Fortran: Modify checks to avoid referencing NULL pointer.

Backport from mainline.

gcc/fortran/ChangeLog:

	PR fortran/102331
	* decl.cc (attr_decl1): Guard against NULL pointer.
	* parse.cc (match_deferred_characteristics): Include BT_CLASS in check
	for derived being undefined.

gcc/testsuite/ChangeLog:

	PR fortran/102331
	* gfortran.dg/class_result_4.f90: Update error message check.
	* gfortran.dg/pr85779_3.f90: Update error message check.